fix / hide custom scrollbar elements when prevented
there was an issue when the scrollbars markup was already declared on
the document, the scrollbars were customized with a background color and
the custom-scrollbars functionality was prevented. As a result we will
see the scrollbar elements (with its custom background color).

to fix this, we are hidding the custom scrollbars via CSS when our
scrollbar-width check returns 0. we also renamed the `gm-smooth-scroll`
class selector to `gm-prevented` to be more explicit of what it does
now.

--- a/gemini-scrollbar.css
+++ b/gemini-scrollbar.css
@@ -19,11 +19,16 @@
   user-select: none;
 }
 
-/* fallback for native floating scrollbars (iOS) */
-.gm-smooth-scrolling {
+/* fallback for native floating scrollbars */
+.gm-prevented {
   -webkit-overflow-scrolling: touch;
 }
+.gm-prevented .gm-scrollbar {
+  display: none;
+}
 
+
+/* actual gemini-scrollbar styles */
 .gm-scrollbar-container {
   position: relative;
   overflow: hidden!important;
@@ -76,12 +81,11 @@
   -webkit-overflow-scrolling: touch;
 }
 
-/* autoshow option */
+/* @option: autoshow */
 .gm-scrollbar-container.gm-autoshow .gm-scrollbar {
   opacity: 0;
   transition: opacity 120ms ease-out;
 }
-
 .gm-scrollbar-container.gm-autoshow:hover .gm-scrollbar,
 .gm-scrollbar-container.gm-autoshow:focus .gm-scrollbar {
   opacity: 1;
